<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/go"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/ButtonTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <EditText
        android:id="@+id/expression"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/InputIniStr"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/OutputIniStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="344dp"
        android:layout_marginTop="461dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathExpr">

        <RadioButton
            android:id="@+id/integral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/derive" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/integrate" />

    </RadioGroup>

    <TextView
        android:id="@+id/board"
        android:layout_width="270dp"
        android:layout_height="52dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go" />

    <ImageView
        android:id="@+id/mathExpr"
        android:layout_width="302dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression"
        app:srcCompat="@android:color/background_light"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/show"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginTop="100dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/expression"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>